--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+
+*{
+  font-family: "Raleway", sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6, p{
+  margin: 0;
+}
+
 :root{
   --color-special: #598D66;
   --color-text: #2C2D35;
