--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -7,15 +7,24 @@
     min-width: 100%;
     justify-content: space-between;
     background-color: var(--bgcolor-main);
+    max-height: 100px;
 }
 
 .logo{
     display: flex;
     gap: 8px;
+    align-items: center;
 }
 
 .logo img{
     object-fit: contain;
+}
+
+.logo a{
+    text-decoration: none;
+    font-size: 20px;
+    color: var(--color-special);
+    font-weight: bold;
 }
 
 .nav{
