--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -21,6 +21,32 @@
 
 .intro_button:hover{
     cursor: pointer;
+    background-color: var(--bgcolor-button-card-active);
+    color: #F4F6F5;
+    transition: all 0.5s ease;
+}
+
+.cards_button{
+    border-radius: 20px;
+    border: none;
+    background-color: var(--bgcolor-button-card);
+    color: var(--color-text);
+    padding: 10px 20px;
+    font-size: 20px;
+}
+
+.cards_button:hover{
+    cursor: pointer;
+}
+
+.cards_button_active{
+    border-radius: 20px;
+    border: none;
+    background-color: var(--bgcolor-button-card-active);
+    color: #F4F6F5;
+    padding: 10px 20px;
+    font-size: 20px;
+    cursor: pointer;
 }
 
 .card_button{
@@ -30,3 +56,11 @@
     font-size: 20px;
     padding: 21px 106px;
 }
+
+.card_button:hover{
+    cursor: pointer;
+    background-color: var(--bgcolor-button-card-active);
+    color: #F4F6F5;
+    transition: all 0.5s ease;
+}
+
