--- a/src/components/Cards/Card/Card.module.css
+++ b/src/components/Cards/Card/Card.module.css
@@ -17,3 +17,24 @@
     gap: 10px;
     margin-bottom: 10px;
 }
+
+.card_creator{
+    color: var(--color-paragraph);
+    font-size: 18px;
+}
+
+.card_info h3{
+    font-size: 30px;
+    color: var(--color-text);
+}
+
+.card_description{
+    font-size: 18px;
+    color: var(--color-text);
+}
+
+.card h4{
+    color: var(--color-special);
+    font-size: 24px;
+    font-weight: normal;
+}
