--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -1,5 +1,22 @@
 .cards{
-    margin: 0 165px;
+    box-sizing: content-box;
+    min-width: 100%;
+    padding: 0 204px;
+}
+
+.cards_title{
+    display: flex;
+    gap: 418px;
+    margin-bottom: 20px;
+}
+
+.cards_buttons{
+    display: flex;
+    gap: 32px;
+}
+
+.cards_name h2{
+    font-size: 40px;
 }
 
 .cards_main{
