--- a/src/components/Introduction/Introdaction.module.css
+++ b/src/components/Introduction/Introdaction.module.css
@@ -2,7 +2,8 @@
     display: flex;
     gap: 30px;
     align-items: center;
-    margin: 0 165px;
+    min-width: 100%;
+    padding: 0 204px;
 }
 
 .intro_info{
