--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -30,3 +30,10 @@
     gap: 60px;
     align-items: center;
 }
+
+@media screen and (max-width: 768px) {
+    .header {
+        padding: 33px 39px;
+        gap: 50px;
+    }
+}
