--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,11 @@ h1, h2, h3, h4, h5, h6, p{
   margin: 0;
 }
 
+button{
+  padding: 0;
+  margin: 0;
+}
+
 :root{
   --color-special: #598D66;
   --color-text: #2C2D35;
