--- a/src/components/Cards/Card/Card.module.css
+++ b/src/components/Cards/Card/Card.module.css
@@ -38,3 +38,10 @@
     font-size: 24px;
     font-weight: normal;
 }
+
+@media screen and (max-width: 768px){
+    .card img{
+        width: 290px;
+        height: 422px;
+    }
+}
