--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -7,6 +7,7 @@
     display: flex;
     gap: 418px;
     margin-bottom: 20px;
+    align-items: center;
 }
 
 .cards_buttons{
@@ -22,4 +23,21 @@
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
+}
+
+@media screen and (max-width: 768px){
+    .cards{
+        padding: 0 39px;
+    }
+    .cards_title{
+        gap: 63px;
+        margin-bottom: 30px;
+    }
+    .cards_name h2{
+        font-size: 30px;
+        font-weight: normal;
+    }
+    .cards_main{
+        width: 690px;
+    }
 }
