--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -101,4 +101,12 @@
         width: 290px;
         padding: 21px 96px;
     }
+    .promo_button{
+        font-size: 18px;
+        padding: 18px 36px;
+        width: 210px;
+    }
+    .footer_button{
+        font-weight: 500;
+    }
 }
